fix: Fix blend mode on safari 9+ only

--- a/source/stylesheets/_components/_components.balloon.scss
+++ b/source/stylesheets/_components/_components.balloon.scss
@@ -9,7 +9,7 @@ $componentName: 'balloon';
   position: relative;
   user-select: none;
   cursor: default;
-  mix-blend-mode: lighten;
+  //mix-blend-mode: lighten;
   opacity: 0.8;
 }
 
